feat: improved GUI and font management for SD card status

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,26 +13,15 @@ platform = espressif32
 board = lilygo-t-display-s3
 framework = arduino
 monitor_speed = 115200
-lib_deps = bodmer/TFT_eSPI@^2.5.43
-;build_flags = 
-;   -DARDUINO_USB_CDC_ON_BOOT=1
-;    -DARDUINO_USB_MODE=1
-;    -D HSPI_MISO=12
-;    -D HSPI_MOSI=11
-;    -D HSPI_SCLK=13
-;    -D HSPI_CS=10
+lib_deps = 
+	bodmer/TFT_eSPI@^2.5.43
+build_flags = 
+	-DARDUINO_USB_CDC_ON_BOOT=1
+	-DARDUINO_USB_MODE=1
+	-DDISABLE_ALL_LIBRARY_WARNINGS
+	-DUSING_DISPLAY_S3_V1
+	-DHSPI_MISO=12
+	-DHSPI_MOSI=11
+	-DHSPI_SCLK=13
+	-DHSPI_CS=10
 
-
-build_flags =
-  -DARDUINO_USB_CDC_ON_BOOT=1         ; Enable USB CDC at boot
-  -DARDUINO_USB_MODE=1                ; Set USB mode to CDC
-  ;-DUSB_VID=0x303A                    ; Optional: Espressif vendor ID
-  ;-DUSB_PID=0x1001                    ; Optional: ESP32-S3 USB PID
-  -DDISABLE_ALL_LIBRARY_WARNINGS     ; Optional: Clean build output
-  -DUSING_DISPLAY_S3_V1              ; TFT_eSPI display version for LilyGO
-  ;-DUSER_SETUP_LOADED                ; Flag to use custom TFT_eSPI setup
-  ;-DSETUP206_LILYGO_T_DISPLAY_S3     ; Preset config for LilyGO display
-  -DHSPI_MISO=12                      ; Custom HSPI pin assignments
-  -DHSPI_MOSI=11
-  -DHSPI_SCLK=13
-  -DHSPI_CS=10
