--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,10 @@ platform = espressif32
 board = lilygo-t-display-s3
 framework = arduino
 monitor_speed = 115200
+
+;monitor_filters = esp32_exception_decoder
+;build_type = debug
+
 lib_deps = 
 	bodmer/TFT_eSPI@^2.5.43
 build_flags = 
