--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,7 @@ monitor_speed = 115200
 ;build_type = debug
 
 lib_deps = 
-	bodmer/TFT_eSPI@^2.5.43
+	bodmer/TFT_eSPI@2.5.43
 build_flags = 
 	-DARDUINO_USB_CDC_ON_BOOT=1
 	-DARDUINO_USB_MODE=1
