--- a/platformio.ini
+++ b/platformio.ini
@@ -22,6 +22,7 @@ lib_deps =
 build_flags = 
 	-DARDUINO_USB_CDC_ON_BOOT=1
 	-DARDUINO_USB_MODE=1
+;	-DUSER_SETUP_LOADED=1 -include include/My_Display_Setup.h
 	-DDISABLE_ALL_LIBRARY_WARNINGS
 	-DUSING_DISPLAY_S3_V1
 	-DHSPI_MISO=12
