--- a/platformio.ini
+++ b/platformio.ini
@@ -13,16 +13,12 @@ platform = espressif32
 board = lilygo-t-display-s3
 framework = arduino
 monitor_speed = 115200
-
-;monitor_filters = esp32_exception_decoder
-;build_type = debug
-
 lib_deps = 
 	bodmer/TFT_eSPI@2.5.43
+	ricmoo/QRCode@^0.0.1
 build_flags = 
 	-DARDUINO_USB_CDC_ON_BOOT=1
 	-DARDUINO_USB_MODE=1
-;	-DUSER_SETUP_LOADED=1 -include include/My_Display_Setup.h
 	-DDISABLE_ALL_LIBRARY_WARNINGS
 	-DUSING_DISPLAY_S3_V1
 	-DHSPI_MISO=12
@@ -30,5 +26,4 @@ build_flags =
 	-DHSPI_SCLK=13
 	-DHSPI_CS=10
 board_build.psram = enabled
- lost connectin management"
- 
+
